footer.css fixed (white space >768px)

--- a/componentes/footer/footer.css
+++ b/componentes/footer/footer.css
@@ -20,6 +20,8 @@ body{
         flex-direction: row;
         justify-content: space-between;
         padding: 0 50px;
+        height: 40vh;
+        min-height: 350px;
     }
 }
 
